# MiniAutoLabeler

./: .gitignore  CMakeLists.txt  README.md  checkColor.cpp  extractColor.cpp  makeDirTree.py  makeSynthethic.cpp  obj.names  rename.py
synth/: syntethic0.txt  syntethic1.txt
